# cpp_dev_skeleton

./: .gitignore  .travis.yml  CMakeLists.txt
include/server/: Balancer.hpp
source/server/: Balancer.cpp  CMakeLists.txt
test/server/: CMakeLists.txt
